# thesis-mas

./: .gitignore  README.md  data.sh  env.sh  log_run.py  pyproject.toml  qwen-2.5-7b-sarcasm.csv  run.py  test-data-r1.csv  test-run.54062.out  test.py  test.sh  test_data.csv  test_gemma.sh  test_llama.sh  test_new_models.sh
configs/: models.yaml
data/commonsense/: commonsense.csv
data/commonsense/archive/: train-00000-of-00001.parquet
data/sentiment/: sockette_labels.txt  sockette_text.txt  test_labels.txt  train_labels.txt  val_text.txt
data/sentiment/archive/: test_text.txt  val_labels.txt
results/: first-gemma-3-27b-sarcasm.csv  first-gemma-3-4b-sarcasm.csv  first-llama-3.1-8b-sarcasm.csv  res.csv
results/first/: gemma-3-4b-sarcasm-old.csv  gemma-3-4b-sarcasm.csv  llama-3.1-8b-sarcasm-old.csv  llama-3.1-8b-sarcasm.csv  llama-3.3-70b-sarcasm.csv  qwen-2.5-7b-sarcasm-old.csv  qwen-2.5-7b-sarcasm.csv
src/: eda.ipynb  first-round-results.py  first_round_results.py  make_second_round_input.py  run_inference.py  test.tsv
utils/: io.py  model_helpers.py  models.py  prompt_registry.py  prompts.py  runner.py
